PATV, SO: Android compatibility
PATV:
- Disable custom sound assets for Android
- Add fallback cues/tracks for custom assets

SO:
- Geodes: Show 8 instead of 10 on Android to fit
- Geodes, NightEvents: Hide "(Leave)" item in submenus on Android to fit
- Respond to any tap on grab tile on Android
- DatePicker: Scaled-down version for Android
- CursorEditor: Disable on Android
- Suppress manual line breaks on Android
- Override dialogue font size on Android
- Improve line breaks and concatenation generally

--- a/ScryingOrb/i18n/fr.json
+++ b/ScryingOrb/i18n/fr.json
@@ -50,22 +50,22 @@
   "geodes.opening": "Les esprits des flèches de cristal acceptent votre offrande de pierre.",
   "geodes.type.question": "Quelles roches étranges souhaitez-vous voir à l'intérieur ?",
   "geodes.type.any": "Les trois prochaines géodes de tout type",
-  "geodes.type.Regular": "Les 10 prochaines géodes",
-  "geodes.type.Frozen": "Les 10 prochaines géodes gelées",
-  "geodes.type.Magma": "Les 10 prochaines géodes de lave",
-  "geodes.type.Omni": "Les 10 prochaines Géodes-Omni",
-  "geodes.type.Trove": "Les 10 prochains trésors d'artefacts",
+  "geodes.type.Regular": "Les {{count}} prochaines géodes",
+  "geodes.type.Frozen": "Les {{count}} prochaines géodes gelées",
+  "geodes.type.Magma": "Les {{count}} prochaines géodes de lave",
+  "geodes.type.Omni": "Les {{count}} prochaines Géodes-Omni",
+  "geodes.type.Trove": "Les {{count}} prochains trésors d'artefacts",
   "geodes.type.leave": "(Laissez ces pierres intactes)",
-  "geodes.header.any1": "La toute prochaine géode ouverte doit contenir:^",
-  "geodes.header.any2": "La géode suivante ouverte fournira:^",
-  "geodes.header.any3": "La troisième géode promet de révéler:^",
-  "geodes.header.Regular": "S'il s'agit de géodes normal, les 10 géodes^suivantes ouverte doivent contenir:^",
-  "geodes.header.Frozen": "S'il s'agit de géodes gelées, les 10 prochaines^géodes ouvertes fourniront:^",
-  "geodes.header.Magma": "S'il s'agit de géodes de lave, les 10 prochaines^géodes promettent de révéler:^",
-  "geodes.header.Omni": "S'il s'agit de Geodes-Omni, les 10 prochaines^geodes offriront certainement:^",
-  "geodes.header.Trove": "S'il s'agit de trésors d'artefacts, les 10^prochains géodes manifesteront:^",
+  "geodes.header.any1": "La toute prochaine géode ouverte doit contenir:",
+  "geodes.header.any2": "La géode suivante ouverte fournira:",
+  "geodes.header.any3": "La troisième géode promet de révéler:",
+  "geodes.header.Regular": "S'il s'agit de géodes normal, les {{count}} géodes^suivantes ouverte doivent contenir:",
+  "geodes.header.Frozen": "S'il s'agit de géodes gelées, les {{count}} prochaines^géodes ouvertes fourniront:",
+  "geodes.header.Magma": "S'il s'agit de géodes de lave, les {{count}} prochaines^géodes promettent de révéler:",
+  "geodes.header.Omni": "S'il s'agit de Geodes-Omni, les {{count}} prochaines^geodes offriront certainement:",
+  "geodes.header.Trove": "S'il s'agit de trésors d'artefacts, les {{count}}^prochains géodes manifesteront:",
   "// Note on geodes.footer": "The $ and = symbols in the next line are turned into coin and star icons by the game. Treat them as adjectives modifying the word 'treasures'.",
-  "geodes.footer": "^^Les trésors $ sont jugés plus précieux par les mortels. Les trésors = sont recherchés par un autre dans votre village.",
+  "geodes.footer": "Les trésors $ sont jugés plus précieux par les mortels. Les trésors = sont recherchés par un autre dans votre village.",
   "geodes.closing.progress": "Ton voyage au fond des mines est^incomplet, mon enfant. Si tu continues à explorer, ces^roches pourraient te révéler des trésors différents et plus importants.",
 
   "nightEvents.opening": "Les esprits de la nuit la plus sombre acceptent votre mystérieuse offrande.",
