--- a/ScryingOrb/i18n/ru.json
+++ b/ScryingOrb/i18n/ru.json
@@ -49,21 +49,21 @@
   "geodes.opening": "Духи хрустальных жеод принимают твои каменные приношения.",
   "geodes.type.question": "В какие странные камни вы хотите заглянуть?",
   "geodes.type.any": "Следующие три жеоды любого типа",
-  "geodes.type.Regular": "Следующие 10 жеод",
-  "geodes.type.Frozen": "Следующие 10 морозных жеод",
-  "geodes.type.Magma": "Следующие 10 магма-жеод",
-  "geodes.type.Omni": "Следующие 10 омнижеод",
-  "geodes.type.Trove": "Следующие 10 Древних кладов",
+  "geodes.type.Regular": "Следующие {{count}} жеод",
+  "geodes.type.Frozen": "Следующие {{count}} морозных жеод",
+  "geodes.type.Magma": "Следующие {{count}} магма-жеод",
+  "geodes.type.Omni": "Следующие {{count}} омнижеод",
+  "geodes.type.Trove": "Следующие {{count}} Древних кладов",
   "geodes.type.leave": "(Оставить это в тайне)",
-  "geodes.header.any1": "Первая расколотая жеода должна содержать:^",
-  "geodes.header.any2": "Вторая расколотая жеода должна содержать:^",
-  "geodes.header.any3": "Третья расколотая жеода должна содержать:^",
-  "geodes.header.Regular": "Следующие 10 жеод^должны содержать:^",
-  "geodes.header.Frozen": "Следующие 10 морозных жеод^должны содержать:^",
-  "geodes.header.Magma": "Следующие 10 магма-жеод^должны содержать:^",
-  "geodes.header.Omni": "Следующие 10 омнижеод^должны содержать:^",
-  "geodes.header.Trove": "Следующие 10 древних кладов^должны содержать:^",
-  "geodes.footer": "^^$ Сокровища считаются ценными у смертных.^= Другие смертные тоже ищут такие сокровища в вашей деревне.",
+  "geodes.header.any1": "Первая расколотая жеода должна содержать:",
+  "geodes.header.any2": "Вторая расколотая жеода должна содержать:",
+  "geodes.header.any3": "Третья расколотая жеода должна содержать:",
+  "geodes.header.Regular": "Следующие {{count}} жеод^должны содержать:",
+  "geodes.header.Frozen": "Следующие {{count}} морозных жеод^должны содержать:",
+  "geodes.header.Magma": "Следующие {{count}} магма-жеод^должны содержать:",
+  "geodes.header.Omni": "Следующие {{count}} омнижеод^должны содержать:",
+  "geodes.header.Trove": "Следующие {{count}} древних кладов^должны содержать:",
+  "geodes.footer": "$ Сокровища считаются ценными у смертных.^= Другие смертные тоже ищут такие сокровища в вашей деревне.",
   "geodes.closing.progress": "Ваше путешествие в глубины шахт^не завершено, юноша. Если вы продолжите исследовать,^эти камни могут раскрыть другие, более ценные сокровища.",
 
   "nightEvents.opening": "Духи самой темной ночи принимают твои тёмные жертвы.",
