--- a/ScryingOrb/i18n/zh.json
+++ b/ScryingOrb/i18n/zh.json
@@ -49,21 +49,21 @@
   "geodes.opening": "冰晶圣灵接受你的石祭.",
   "geodes.type.question": "你想窥视奇怪石头内部的秘密?",
   "geodes.type.any": "以下类型中的随即晶石与宝箱",
-  "geodes.type.Regular": "未来 10 个 普通晶石 可能发现",
-  "geodes.type.Frozen": "未来 10 个 冰晶石 可能发现",
-  "geodes.type.Magma": "未来 10 个 岩浆晶石 可能发现",
-  "geodes.type.Omni": "未来 10 个 万像晶石 可能发现",
-  "geodes.type.Trove": "未来 10 个 古物宝箱 可能发现",
+  "geodes.type.Regular": "未来 {{count}} 个 普通晶石 可能发现",
+  "geodes.type.Frozen": "未来 {{count}} 个 冰晶石 可能发现",
+  "geodes.type.Magma": "未来 {{count}} 个 岩浆晶石 可能发现",
+  "geodes.type.Omni": "未来 {{count}} 个 万像晶石 可能发现",
+  "geodes.type.Trove": "未来 {{count}} 个 古物宝箱 可能发现",
   "geodes.type.leave": "(把你末打开的石头与宝箱)",
-  "geodes.header.any1": "未来几个破开的晶石可能发现:^",
-  "geodes.header.any2": "未来几个破开的晶石可能发现:^",
-  "geodes.header.any3": "未来几个破开的晶石可能发现:^",
-  "geodes.header.Regular": "如破开普通晶石,未来10个可能发现:^",
-  "geodes.header.Frozen": "如破开冰晶石,未来10个可能发现:^",
-  "geodes.header.Magma": "如破开岩浆晶石,未来10个可能发现:^",
-  "geodes.header.Omni": "如破开万像晶石,未来10个可能发现:^",
-  "geodes.header.Trove": "如开启古物宝箱,未来10个可能发现:^",
-  "geodes.footer": "^^$珠宝更有价值.^=村民中有人正在寻觅的珠宝.",
+  "geodes.header.any1": "未来几个破开的晶石可能发现:",
+  "geodes.header.any2": "未来几个破开的晶石可能发现:",
+  "geodes.header.any3": "未来几个破开的晶石可能发现:",
+  "geodes.header.Regular": "如破开普通晶石,未来{{count}}个可能发现:",
+  "geodes.header.Frozen": "如破开冰晶石,未来{{count}}个可能发现:",
+  "geodes.header.Magma": "如破开岩浆晶石,未来{{count}}个可能发现:",
+  "geodes.header.Omni": "如破开万像晶石,未来{{count}}个可能发现:",
+  "geodes.header.Trove": "如开启古物宝箱,未来{{count}}个可能发现:",
+  "geodes.footer": "$珠宝更有价值.^=村民中有人正在寻觅的珠宝.",
   "geodes.closing.progress": "你到矿井深处的旅程是不完整的,孩子.如果你更深的探索,^这些岩石可能会揭示不同的,更大的宝藏.",
 
   "nightEvents.opening": "暗夜女神接受你的神秘礼物.",
