--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -50,22 +50,22 @@
   "geodes.opening": "The spirits of the crystal spires accept your stony offering.",
   "geodes.type.question": "Which strange rocks do you wish to peek inside?",
   "geodes.type.any": "Next three geodes of any type",
-  "geodes.type.Regular": "Next 10 Geodes",
-  "geodes.type.Frozen": "Next 10 Frozen Geodes",
-  "geodes.type.Magma": "Next 10 Magma Geodes",
-  "geodes.type.Omni": "Next 10 Omni Geodes",
-  "geodes.type.Trove": "Next 10 Artifact Troves",
+  "geodes.type.Regular": "Next {{count}} Geodes",
+  "geodes.type.Frozen": "Next {{count}} Frozen Geodes",
+  "geodes.type.Magma": "Next {{count}} Magma Geodes",
+  "geodes.type.Omni": "Next {{count}} Omni Geodes",
+  "geodes.type.Trove": "Next {{count}} Artifact Troves",
   "geodes.type.leave": "(Leave these stones unturned)",
-  "geodes.header.any1": "The very next geode cracked shall contain:^",
-  "geodes.header.any2": "The following geode opened will provide:^",
-  "geodes.header.any3": "The third next geode rived promises to reveal:^",
-  "geodes.header.Regular": "If they be regular Geodes, the next 10 geodes^cracked shall contain:^",
-  "geodes.header.Frozen": "If they be Frozen Geodes, the next 10 geodes^opened will provide:^",
-  "geodes.header.Magma": "If they be Magma Geodes, the next 10 geodes^rived promise to reveal:^",
-  "geodes.header.Omni": "If they be Omni Geodes, the next 10 geodes^split are sure to offer:^",
-  "geodes.header.Trove": "If they be Artifact Troves, the next 10 geodes^shattered shall manifest:^",
+  "geodes.header.any1": "The very next geode cracked shall contain:",
+  "geodes.header.any2": "The following geode opened will provide:",
+  "geodes.header.any3": "The third next geode rived promises to reveal:",
+  "geodes.header.Regular": "If they be regular Geodes, the next {{count}} geodes^cracked shall contain:",
+  "geodes.header.Frozen": "If they be Frozen Geodes, the next {{count}} geodes^opened will provide:",
+  "geodes.header.Magma": "If they be Magma Geodes, the next {{count}} geodes^rived promise to reveal:",
+  "geodes.header.Omni": "If they be Omni Geodes, the next {{count}} geodes^split are sure to offer:",
+  "geodes.header.Trove": "If they be Artifact Troves, the next {{count}} geodes^shattered shall manifest:",
   "// Note on geodes.footer": "The $ and = symbols in the next line are turned into coin and star icons by the game. Treat them as adjectives modifying the word 'treasures'.",
-  "geodes.footer": "^^$ treasures are deemed more valuable by mortals.^= treasures are sought by another in your village.",
+  "geodes.footer": "$ treasures are deemed more valuable by mortals.^= treasures are sought by another in your village.",
   "geodes.closing.progress": "Your journey to the depths of the mines is^incomplete, child. Should you explore further,^these rocks may reveal different, greater treasures.",
 
   "nightEvents.opening": "The spirits of the darkest night accept your arcane offering.",
